--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">	
 	<title>Linktree - Philipp von Neumann</title>
+	<link rel="stylesheet" href="./style.css"/>
   </head>
 
   <body>
