--- a/index.html
+++ b/index.html
@@ -5,21 +5,26 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">	
 	<title>Linktree - Philipp von Neumann</title>
 	<link rel="stylesheet" href="./style.css"/>
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+	<link href="https://iosevka-webfonts.github.io/iosevka-slab/iosevka-slab.css" rel="stylesheet" />
   </head>
 
   <body>
-	<h1>Philipp von Neumann</h1>
-	<a href="https://www.von-neumann.com"><img src="./assets/img/Potrait-Studio-Quadrat.png" alt="potrait of philipp von neumann" height=200></a>
-	<ul>
-	  <li><a href="https://www.instagram.com/philipp_von_neumann/"><h2>instagram</h2></a></li>
-	  <li><a href="https://sonomu.club/@PvN"><h2>mastodon</h2></a></li>
-	  <li><a href="https://bsky.app/profile/von-neumann.com"><h2>bluesky</h2></a></li>
-	  <li><a href="https://github.com/PvonN"><h2>github</h2></a></li>
-	  <li><a href="https://soundcloud.com/phvon"><h2>soundcloud</h2></a></li>
-	</ul>
+	<div class="main-block">
+	  <a class="img-link" href="https://www.von-neumann.com">		
+		<img class="img" src="./assets/img/stapeltor_potrait©LuiseJakobi.jpg" alt="potrait of philipp von neumann">		
+	  </a>
+	  <div>
+		<h1>Philipp von Neumann</h1>
+		<ul class="links">
+		  <li><a href="https://www.von-neumann.com/"><h2>website</h2></a></li>
+		  <li><a href="https://www.instagram.com/philipp_von_neumann/"><h2>instagram</h2></a></li>
+		  <li><a href="https://sonomu.club/@PvN"><h2>mastodon</h2></a></li>
+		  <li><a href="https://bsky.app/profile/von-neumann.com"><h2>bluesky</h2></a></li>
+		  <li><a href="https://github.com/PvonN"><h2>github</h2></a></li>
+		  <li><a href="https://soundcloud.com/phvon"><h2>soundcloud</h2></a></li>
+		</ul>	
+	  </div>
+	</div>
 	
 	<footer>
 	  <p>© 2026 philipp von neumann</p>
